# strata

./: .env.example  .gitignore  LICENSE  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json
api/: config.py  db.py  index.py  schemas.py
api/data/: cache.py  fetcher.py  yfinance_client.py
api/engine/: backtest.py  metrics.py  rebalance.py
api/routes/: backtest.py  health.py
api/tests/: README.md  test_backtest.py  test_metrics.py  test_rebalance.py
app/: globals.css  layout.tsx  page.tsx
components/: Dashboard.tsx  EmptyState.tsx  EquityChartPlaceholder.tsx  ErrorState.tsx  LoadingState.tsx  MetricsGrid.tsx  MetricsTable.tsx  ResultsPanel.tsx  Splash.tsx  StrategyForm.tsx  Toast.tsx
components/charts/: EquityChart.tsx  MonthlyHeatmap.tsx  ReturnsHistogram.tsx  RollingSharpe.tsx
lib/: api.ts  format.ts  presets.ts  share.ts  stats.ts  types.ts
scripts/: build_share_links.py  prewarm.py  screenshot.mjs  verify-flash.mjs
