[project]
name = "strata"
version = "0.1.0"
description = "Strata API — FastAPI backend for the portfolio backtester."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "uvicorn>=0.46.0",
]
